post-check;id#: 183;v: 1.45;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -30,7 +30,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * (done) edit: threejs-curve-quadratic-bezier-curve - excpand on sections
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
 * (done) edit: threejs-curve-geometry-from - proof read
-* () edit: threejs-mesh - proof read
+* (done) edit: threejs-mesh - proof read
 * () edit: git-push - create, and expand sections
 * () idle-mrsun : work on r101
 
