--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -8,6 +8,17 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * () edit: threejs-line-fat-width
 * () edit: threejs-standard-material
 * () edit: threejs-basic-material
+* () edit: threejs-normal-map
+* () edit: threejs-geometry
+
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 05/28/2023 - WED 05/31/2023
+
+### () - MON 05/28/2023
+
+### () - SUN 05/28/2023
 
 <!-------- ----------
 -- WEEK 4
@@ -17,11 +28,11 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - SAT 05/27/2023
 
 
+
 ### () - FRI 05/26/2023
 * () edit: threejs-curve-quadratic-bezier-curve
 * () edit: git-push
-* () edit: threejs-normal-map
-* () edit: threejs-geometry
+* () edit: git-push - create, and expand sections
 * () build and publish
 * () idle-mrsun : work on r101
 
@@ -31,8 +42,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
 * (done) edit: threejs-curve-geometry-from - proof read
 * (done) edit: threejs-mesh - proof read
-* () edit: git-push - create, and expand sections
-* () idle-mrsun : work on r101
+* (done) idle-mrsun : work on r101
 
 ### () - WED 05/24/2023
 * (done) edit: threejs-curve - proof read opening, start new points section
