post-check;id#: 1044;v: 1.7;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -30,7 +30,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 
 
 ### () - FRI 05/26/2023
-* () edit: threejs-curve-quadratic-bezier-curve
+* (done) edit: threejs-curve-quadratic-bezier-curve
 * () edit: git-push
 * () edit: git-push - create, and expand sections
 * () build and publish
