post-check;id#: 184;v: 1.30;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -31,14 +31,14 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 
 ### () - FRI 05/26/2023
 * (done) edit: threejs-curve-quadratic-bezier-curve
-* () edit: git-push
+* (done) edit: threejs-basic-material
 * () edit: git-push - create, and expand sections
 * () build and publish
 * () idle-mrsun : work on r101
 
 ### () - THU 05/25/2023
 * (done) start post #1044 on threejs-curve-quadratic-bezier-curve
-* (done) edit: threejs-curve-quadratic-bezier-curve - excpand on sections
+* (done) edit: threejs-curve-quadratic-bezier-curve - expand on sections
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
 * (done) edit: threejs-curve-geometry-from - proof read
 * (done) edit: threejs-mesh - proof read
