--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -32,6 +32,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - FRI 05/26/2023
 * (done) edit: threejs-curve-quadratic-bezier-curve
 * (done) edit: threejs-basic-material
+* () edit: threejs-basic-material - write about new uv map demo
 * () edit: git-push - create, and expand sections
 * () build and publish
 * () idle-mrsun : work on r101
