--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -32,7 +32,12 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - FRI 05/26/2023
 * (done) edit: threejs-curve-quadratic-bezier-curve
 * (done) edit: threejs-basic-material
-* () edit: threejs-basic-material - write about new uv map demo
+* (done) edit: threejs-basic-material - write about new uv map demo
+
+* () edit: threejs-buffer-geometry-attributes-uv - add uv map cube demo
+* () edit: threejs-box-geometry - add uv map cube demo
+
+
 * () edit: git-push - create, and expand sections
 * () build and publish
 * () idle-mrsun : work on r101
