--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -26,19 +26,18 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ## () - WEEK 4 - SUN 05/21/2023 - SAT 05/27/2023
 
 ### () - SAT 05/27/2023
-
-
+* () edit: threejs-box-geometry - add uv map cube demo from threejs-buffer-geometry-attributes-uv
 
 ### () - FRI 05/26/2023
 * (done) edit: threejs-curve-quadratic-bezier-curve
 * (done) edit: threejs-basic-material
 * (done) edit: threejs-basic-material - write about new uv map demo
-
-* () edit: threejs-buffer-geometry-attributes-uv - add uv map cube demo
-* () edit: threejs-box-geometry - add uv map cube demo
-
+* (done) edit: threejs-buffer-geometry-attributes-uv - add uv map cube demo
 
 * () edit: git-push - create, and expand sections
+
+
+
 * () build and publish
 * () idle-mrsun : work on r101
 
