post-check;id#: 1043;v: 1.4;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -33,10 +33,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * (done) edit: threejs-basic-material
 * (done) edit: threejs-basic-material - write about new uv map demo
 * (done) edit: threejs-buffer-geometry-attributes-uv - add uv map cube demo
-
-* () edit: git-push - create, and expand sections
-
-
+* (done) edit: git-push - create, and expand sections
 
 * () build and publish
 * () idle-mrsun : work on r101
