post-check;id#: 975;v: 1.74;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -1,15 +1,8 @@
 # todo list for MAY 2023
 
-THREEJS, git
+THREEJS, git, idle-mrsun
 
-I have stayed in my lane with threejs for over a year, but I think now I should expand and edit my content on git at least a little this month as well.
-
-
-* () edit: threejs-line-fat-width
-* () edit: threejs-standard-material
-* () edit: threejs-basic-material
-* () edit: threejs-normal-map
-* () edit: threejs-geometry
+I have stayed in my lane with threejs for over a year, but I think now I should expand and edit my content on git at least a little this month. I will of course need to keep up with threejs as well, it is just that I have found that I am going to want to try to find a new over all plan with it. There is also the new idle game that I have started called MrSun Idle, this is also a noval direciton that I would like to explore.
 
 <!-------- ----------
 -- WEEK 5
@@ -26,7 +19,13 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ## () - WEEK 4 - SUN 05/21/2023 - SAT 05/27/2023
 
 ### () - SAT 05/27/2023
-* () edit: threejs-box-geometry - add uv map cube demo from threejs-buffer-geometry-attributes-uv
+* (done) edit: threejs-object3d-position - proof read intro, and opening
+* () edit: threejs-object3d-position - check for post
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
+
+* () build and publish
+
 
 ### () - FRI 05/26/2023
 * (done) edit: threejs-curve-quadratic-bezier-curve
@@ -34,9 +33,6 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * (done) edit: threejs-basic-material - write about new uv map demo
 * (done) edit: threejs-buffer-geometry-attributes-uv - add uv map cube demo
 * (done) edit: git-push - create, and expand sections
-
-* () build and publish
-* () idle-mrsun : work on r101
 
 ### () - THU 05/25/2023
 * (done) start post #1044 on threejs-curve-quadratic-bezier-curve
