post-check;id#: 975;v: 1.81;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -12,6 +12,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - MON 05/28/2023
 
 ### () - SUN 05/28/2023
+* () edit: threejs-object3d-position - expand bounds seciton more with some wrap demos
 
 <!-------- ----------
 -- WEEK 4
@@ -20,7 +21,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 
 ### () - SAT 05/27/2023
 * (done) edit: threejs-object3d-position - proof read intro, and opening
-* () edit: threejs-object3d-position - check for post
+* (done) edit: threejs-object3d-position - check for post
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
 
