--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -9,10 +9,17 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ---------- --------->
 ## () - WEEK 5 - SUN 05/28/2023 - WED 05/31/2023
 
-### () - MON 05/28/2023
+### () - TUE 05/30/2023
+* () edit: threejs-object3d-position - expand bounds seciton more with some wrap demos
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
+* () build and publish
+* () work on r152 demos
+
+### () - MON 05/29/2023
+* (done) work on r152 demos
 
 ### () - SUN 05/28/2023
-* () edit: threejs-object3d-position - expand bounds seciton more with some wrap demos
 
 <!-------- ----------
 -- WEEK 4
@@ -22,10 +29,6 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - SAT 05/27/2023
 * (done) edit: threejs-object3d-position - proof read intro, and opening
 * (done) edit: threejs-object3d-position - check for post
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
-
-* () build and publish
 
 
 ### () - FRI 05/26/2023
