post-check;id#: 883;v: 1.61;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -2,7 +2,7 @@
 
 THREEJS, git, idle-mrsun
 
-I have stayed in my lane with threejs for over a year, but I think now I should expand and edit my content on git at least a little this month. I will of course need to keep up with threejs as well, it is just that I have found that I am going to want to try to find a new over all plan with it. There is also the new idle game that I have started called MrSun Idle, this is also a noval direciton that I would like to explore.
+I have stayed in my lane with threejs for over a year, but I think now I should expand and edit my content on git at least a little this month. I will of course need to keep up with threejs as well, it is just that I have found that I am going to want to try to find a new over all plan with it. There is also the new idle game that I have started called MrSun Idle, this is also a novel direction that I would like to explore.
 
 <!-------- ----------
 -- WEEK 5
@@ -10,7 +10,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ## () - WEEK 5 - SUN 05/28/2023 - WED 05/31/2023
 
 ### () - TUE 05/30/2023
-* () edit: threejs-object3d-position - expand bounds seciton more with some wrap demos
+* () edit: threejs-object3d-position - expand bounds section more with some wrap demos
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
 * () build and publish
