--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -9,11 +9,20 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ---------- --------->
 ## () - WEEK 5 - SUN 05/28/2023 - WED 05/31/2023
 
+* () edit: threejs-buffer-geometry-attributes-position - expand curve section
+* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
+
 ### () - TUE 05/30/2023
+* (done) edit: threejs-buffer-geometry-attributes-position - new curve section started
+* () edit: threejs-buffer-geometry-loader - new basic example
 * () edit: threejs-object3d-position - expand bounds section more with some wrap demos
+ 
+
+* () build and publish
+
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
-* () build and publish
+
 * () work on r152 demos
 
 ### () - MON 05/29/2023
