--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -15,8 +15,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - TUE 05/30/2023
 * (done) edit: threejs-buffer-geometry-attributes-position - new curve section started
 * (done) edit: threejs-buffer-geometry-loader - new basic example
-* () edit: threejs-object3d-position - expand bounds section more with some wrap demos
- 
+* (done) edit: threejs-object3d-position - expand bounds section more with some wrap demos
 
 * () build and publish
 
