post-check;id#: 993;v: 1.41;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -9,20 +9,23 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ---------- --------->
 ## () - WEEK 5 - SUN 05/28/2023 - WED 05/31/2023
 
+
+### () - WED 05/31/2023
+* (done) forpost: threejs-curve - combine old s3 and s4 sections into one
+* () edit: threejs-curve - combine, proof read, and expand s3 and s4
+
 * () edit: threejs-buffer-geometry-attributes-position - expand curve section
 * () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
+
 
 ### () - TUE 05/30/2023
 * (done) edit: threejs-buffer-geometry-attributes-position - new curve section started
 * (done) edit: threejs-buffer-geometry-loader - new basic example
 * (done) edit: threejs-object3d-position - expand bounds section more with some wrap demos
-
-* () build and publish
-
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
-
-* () work on r152 demos
+* (done) build and publish
+* (done) work on r152 demos
 
 ### () - MON 05/29/2023
 * (done) work on r152 demos
