post-check;id#: 993;v: 1.42;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -12,7 +12,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 
 ### () - WED 05/31/2023
 * (done) forpost: threejs-curve - combine old s3 and s4 sections into one
-* () edit: threejs-curve - combine, proof read, and expand s3 and s4
+* (done) edit: threejs-curve - combine, proof read, and expand s3 and s4
 
 * () edit: threejs-buffer-geometry-attributes-position - expand curve section
 * () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
