--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -13,5 +13,17 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/03/2023
 
 ### () - FRI 06/02/2023
+* () new:  start post #1046 on threejs-tube-geometry
 
 ### () - THU 06/01/2023
+* () forpost: start threejs-curve-path forpost folder starting with current r152 demos
+* () new:  start post #1045 on threejs-curve-path
+
+* () demo: new r152 demo that will just be a basic tube geometry example
+* () demo: new r152 demo that is basic update demo of tube geometry
+
+* () edit: threejs-buffer-geometry-attributes-position - expand curve section
+* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
+
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
