post-check;id#: 1045;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -16,8 +16,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () new:  start post #1046 on threejs-tube-geometry
 
 ### () - THU 06/01/2023
-* () forpost: start threejs-curve-path forpost folder starting with current r152 demos
-* () new:  start post #1045 on threejs-curve-path
+* (done) forpost: start threejs-curve-path forpost folder starting with current r152 demos
+* (done) new:  start post #1045 on threejs-curve-path
 
 * () demo: new r152 demo that will just be a basic tube geometry example
 * () demo: new r152 demo that is basic update demo of tube geometry
