--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -13,6 +13,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/03/2023
 
 ### () - FRI 06/02/2023
+* (done) threejs-normal-map - edit opening and getting started
 * () forpost: start a forpost folder for threejs-tube-geometry
 * () new:  start post #1046 on threejs-tube-geometry
 
