--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -14,8 +14,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - FRI 06/02/2023
 * (done) threejs-normal-map - edit opening and getting started
-* () forpost: start a forpost folder for threejs-tube-geometry
-* () new:  start post #1046 on threejs-tube-geometry
+* (done) forpost: start a forpost folder for threejs-tube-geometry
+* (done) new:  start post #1046 on threejs-tube-geometry
 
 * () edit: threejs-curve-path - write about update demos
 
