post-check;id#: 1045;v: 1.3;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -4,6 +4,12 @@ Linux, THREEJS
 
 I will have to keep staying in my lane with threejs of course. However at this time I should also expand, and edit Linux content at least a little as well now. Linux is has a much wider user base, so there is the potential of more traffic. However in any case I use Linux every day, there is much more for me to learn about it, so it just makes sense to do more research, write more content, and improve the older content I have written thus far.
 
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+
+* () edit: threejs-buffer-geometry-attributes-position - expand curve section
+* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
 <!-------- ----------
 -- WEEK 1
@@ -16,11 +22,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) threejs-normal-map - edit opening and getting started
 * (done) forpost: start a forpost folder for threejs-tube-geometry
 * (done) new:  start post #1046 on threejs-tube-geometry
+* (done) edit: threejs-curve-path - write about update demos
 
-* () edit: threejs-curve-path - write about update demos
-
-* () edit: threejs-buffer-geometry-attributes-position - expand curve section
-* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
