--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -24,6 +24,9 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) new:  start post #1046 on threejs-tube-geometry
 * (done) edit: threejs-curve-path - write about update demos
 
+* () edit: threejs-tube-geometry - write about update curve path demo
+
+* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
