post-check;id#: 1046;v: 1.5;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -7,9 +7,27 @@ I will have to keep staying in my lane with threejs of course. However at this t
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
+## () - WEEK 2 - THU 06/04/2023 - SAT 06/10/2023
 
+### () - SAT 06/10/2023
+
+### () - FRI 06/09/2023
+
+### () - THU 06/08/2023
+
+### () - WED 06/07/2023
+
+### () - TUE 06/06/2023
+* () new:  start post #1047 on linux-sysbench
+
+### () - MON 06/05/2023
+
+### () - SUN 06/04/2023
+* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 * () edit: threejs-buffer-geometry-attributes-position - expand curve section
 * () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
 
 <!-------- ----------
 -- WEEK 1
@@ -17,6 +35,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 1 - THU 06/01/2023 - SAT 06/03/2023
 
 ### () - SAT 06/03/2023
+* (done) edit: threejs-tube-geometry - write about update curve path demo
 
 ### () - FRI 06/02/2023
 * (done) threejs-normal-map - edit opening and getting started
@@ -24,16 +43,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) new:  start post #1046 on threejs-tube-geometry
 * (done) edit: threejs-curve-path - write about update demos
 
-* () edit: threejs-tube-geometry - write about update curve path demo
-
-* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
-
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
-
-
 ### () - THU 06/01/2023
 * (done) forpost: start threejs-curve-path forpost folder starting with current r152 demos
 * (done) new:  start post #1045 on threejs-curve-path
-
-
