post-check;id#: 883;v: 1.66;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -19,13 +19,14 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - TUE 06/06/2023
 * () new:  start post #1047 on linux-sysbench
+* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 ### () - MON 06/05/2023
+* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
 ### () - SUN 06/04/2023
-* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
-* () edit: threejs-buffer-geometry-attributes-position - expand curve section
-* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* (done) edit: threejs-buffer-geometry-attributes-position - expand curve section
+
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
 
