--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -16,13 +16,16 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/08/2023
 
 ### () - WED 06/07/2023
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
 ### () - TUE 06/06/2023
 * () new:  start post #1047 on linux-sysbench
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 ### () - MON 06/05/2023
-* () edit: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () edit: threejs-buffer-geometry-loader - write about new manager, and buffgeoprom section demos
+* () forpost: threejs-buffer-geometry-attributes-position - more buffer geometry loader demos
+* () edit: threejs-buffer-geometry-loader - write about new buffer geomerty laoder demos
 
 ### () - SUN 06/04/2023
 * (done) edit: threejs-buffer-geometry-attributes-position - expand curve section
