post-check;id#: 172;v: 1.36;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -23,6 +23,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 ### () - MON 06/05/2023
+* () forpost: threejs-buffer-geometry - expand sections on making and using hand coded JSON files
 * () edit: threejs-buffer-geometry-loader - write about new manager, and buffgeoprom section demos
 * () forpost: threejs-buffer-geometry-attributes-position - more buffer geometry loader demos
 * () edit: threejs-buffer-geometry-loader - write about new buffer geomerty laoder demos
