post-check;id#: 851;v: 1.60;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -23,16 +23,20 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 ### () - MON 06/05/2023
+* (done) forpost: threejs-buffer-geometry - update all demos to r146 style 
+
 * () forpost: threejs-buffer-geometry - expand sections on making and using hand coded JSON files
 * () edit: threejs-buffer-geometry-loader - write about new manager, and buffgeoprom section demos
+
+
 * () forpost: threejs-buffer-geometry-attributes-position - more buffer geometry loader demos
 * () edit: threejs-buffer-geometry-loader - write about new buffer geomerty laoder demos
 
-### () - SUN 06/04/2023
-* (done) edit: threejs-buffer-geometry-attributes-position - expand curve section
-
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
+
+### () - SUN 06/04/2023
+* (done) edit: threejs-buffer-geometry-attributes-position - expand curve section
 
 <!-------- ----------
 -- WEEK 1
