post-check;id#: 851;v: 1.61;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -24,13 +24,9 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - MON 06/05/2023
 * (done) forpost: threejs-buffer-geometry - update all demos to r146 style 
+* (done) forpost: threejs-buffer-geometry - expand sections on making and using hand coded JSON files
+* (done) edit: threejs-buffer-geometry-loader - write about new load many demo for buffer geomerty loader section
 
-* () forpost: threejs-buffer-geometry - expand sections on making and using hand coded JSON files
-* () edit: threejs-buffer-geometry-loader - write about new manager, and buffgeoprom section demos
-
-
-* () forpost: threejs-buffer-geometry-attributes-position - more buffer geometry loader demos
-* () edit: threejs-buffer-geometry-loader - write about new buffer geomerty laoder demos
 
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
