post-check;id#: 1047;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -14,6 +14,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/09/2023
 
 ### () - THU 06/08/2023
+* () new:  start post #1048 on linux-dd
 
 ### () - WED 06/07/2023
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
@@ -22,14 +23,15 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () new:  start post #1047 on linux-sysbench
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
+* () forpost: 
+
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
+
 ### () - MON 06/05/2023
 * (done) forpost: threejs-buffer-geometry - update all demos to r146 style 
 * (done) forpost: threejs-buffer-geometry - expand sections on making and using hand coded JSON files
 * (done) edit: threejs-buffer-geometry-loader - write about new load many demo for buffer geomerty loader section
-
-
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
 
 ### () - SUN 06/04/2023
 * (done) edit: threejs-buffer-geometry-attributes-position - expand curve section
