--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -20,7 +20,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
 ### () - TUE 06/06/2023
-* () new:  start post #1047 on linux-sysbench
+* (done) new:  start post #1047 on linux-sysbench
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 * () forpost: 
