--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -18,12 +18,13 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - WED 06/07/2023
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 ### () - TUE 06/06/2023
 * (done) new:  start post #1047 on linux-sysbench
-* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
+* (done) start new r152 demo that is an attempt at making a cusrom renderer
 
-* () forpost: 
+* () forpost: threejs-buffer-geomerty
 
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
