--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -12,22 +12,33 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/10/2023
 
 ### () - FRI 06/09/2023
+* () new:  start post #1050 on threejs-vector2
+
+* () forpost: threejs-buffer-geomerty -
+
 
 ### () - THU 06/08/2023
-* () new:  start post #1048 on linux-dd
+* () new:  start post #1049 on linux-dd
+* () edit: threejs-standard-material - proof read opening and getting started
 
 ### () - WED 06/07/2023
+* (done) forpost: threejs-line-fat-width - new section on tube geometry
+* (done) edit: threejs-line-fat-width -  write about new tube geomerty section
+
+* () forpost: start forpost folder on lathe-geometry with at least one basic example
+* () new:  start post #1048 on threejs-lathe-geometry, write about first basic example
+
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
+
+
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
 
 ### () - TUE 06/06/2023
 * (done) new:  start post #1047 on linux-sysbench
 * (done) start new r152 demo that is an attempt at making a cusrom renderer
 
-* () forpost: threejs-buffer-geomerty
-
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
 
 ### () - MON 06/05/2023
 * (done) forpost: threejs-buffer-geometry - update all demos to r146 style 
