post-check;id#: 1048;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -24,9 +24,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
 * (done) edit: threejs-line-fat-width -  write about new tube geomerty section
-
-* () forpost: start forpost folder on lathe-geometry with at least one basic example
-* () new:  start post #1048 on threejs-lathe-geometry, write about first basic example
+* (done) forpost: start forpost folder on lathe-geometry with at least one basic example
+* (done) new:  start post #1048 on threejs-lathe-geometry
 
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
