post-check;id#: 1026;v: 1.13;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -10,6 +10,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 2 - THU 06/04/2023 - SAT 06/10/2023
 
 ### () - SAT 06/10/2023
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
 
 ### () - FRI 06/09/2023
 * () new:  start post #1050 on threejs-vector2
@@ -21,18 +23,20 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () new:  start post #1049 on linux-dd
 * () edit: threejs-standard-material - proof read opening and getting started
 
+* () json: vertcolor-trees - start first tri-12plus json file
+
+
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
 * (done) edit: threejs-line-fat-width -  write about new tube geomerty section
 * (done) forpost: start forpost folder on lathe-geometry with at least one basic example
 * (done) new:  start post #1048 on threejs-lathe-geometry
+* (done) json: vertcolor-trees - start first tri6-morph json file
+
+* () json: vertcolor-trees - more tri6 trees
 
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
-
-
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
 
 ### () - TUE 06/06/2023
 * (done) new:  start post #1047 on linux-sysbench
