--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -23,8 +23,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () new:  start post #1049 on linux-dd
 * () edit: threejs-standard-material - proof read opening and getting started
 
-* () json: vertcolor-trees - start first tri-12plus json file
+* () json: vertcolor-trees - position and color for four.json of '6tri'
+* () json: vertcolor-trees - five and six json files for '6tri'
 
+* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
@@ -32,11 +34,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) forpost: start forpost folder on lathe-geometry with at least one basic example
 * (done) new:  start post #1048 on threejs-lathe-geometry
 * (done) json: vertcolor-trees - start first tri6-morph json file
-
-* () json: vertcolor-trees - more tri6 trees
+* (done) json: vertcolor-trees - more tri6 trees
 
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
-* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
+
 
 ### () - TUE 06/06/2023
 * (done) new:  start post #1047 on linux-sysbench
