--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -25,6 +25,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () json: vertcolor-trees - position and color for four.json of '6tri'
 * () json: vertcolor-trees - five and six json files for '6tri'
+* () forpost: threejs-buffer-geometry - see about ensuring load order of json files
 
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 
