--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -25,9 +25,11 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () json: vertcolor-trees - position and color for four.json of '6tri'
 * () json: vertcolor-trees - five and six json files for '6tri'
-* () forpost: threejs-buffer-geometry - see about ensuring load order of json files
 
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
+* () forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+
 
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
@@ -36,9 +38,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) new:  start post #1048 on threejs-lathe-geometry
 * (done) json: vertcolor-trees - start first tri6-morph json file
 * (done) json: vertcolor-trees - more tri6 trees
-
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
-
+* (done) forpost: threejs-buffer-geometry - see about ensuring load order of json files
 
 ### () - TUE 06/06/2023
 * (done) new:  start post #1047 on linux-sysbench
