post-check;id#: 1049;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -20,18 +20,16 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 
 ### () - THU 06/08/2023
-* () edit: threejs-standard-material - proof read opening and getting started
-
-* () new:  start post #1049 on linux-dd
-
-
-* () json: vertcolor-trees - position and color for four.json of '6tri'
-* () json: vertcolor-trees - five and six json files for '6tri'
+* (done) edit: threejs-standard-material - proof read opening and getting started
+* (done) json: vertcolor-trees - position and color for 3.json of '6tri'
+* (done) json: vertcolor-trees - start a 4.json for '6tri'
+* (done) new:  start post #1049 on linux-dd
 
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 * () forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
+* () edit: linux-dd - expand sections.
 
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
