--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -5,9 +5,15 @@ Linux, THREEJS
 I will have to keep staying in my lane with threejs of course. However at this time I should also expand, and edit Linux content at least a little as well now. Linux is has a much wider user base, so there is the potential of more traffic. However in any case I use Linux every day, there is much more for me to learn about it, so it just makes sense to do more research, write more content, and improve the older content I have written thus far.
 
 <!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 06/11/2023 - SAT 06/17/2023
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+
+<!-------- ----------
 -- WEEK 2
 ---------- --------->
-## () - WEEK 2 - THU 06/04/2023 - SAT 06/10/2023
+## () - WEEK 2 - SUN 06/04/2023 - SAT 06/10/2023
 
 ### () - SAT 06/10/2023
 * () idle-mrsun : finish r101
@@ -16,8 +22,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/09/2023
 * () new:  start post #1050 on threejs-vector2
 
-* () forpost: threejs-buffer-geomerty -
-
+* () forpost: threejs-buffer-geomerty - 
+* () edit: linux-dd - expand sections.
 
 ### () - THU 06/08/2023
 * (done) edit: threejs-standard-material - proof read opening and getting started
@@ -25,11 +31,12 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) json: vertcolor-trees - start a 4.json for '6tri'
 * (done) new:  start post #1049 on linux-dd
 
-* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 * () forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
-* () edit: linux-dd - expand sections.
+* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
+* () forpost: start three-vector2 for post folder
+
+
 
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
