--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -30,8 +30,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) json: vertcolor-trees - position and color for 3.json of '6tri'
 * (done) json: vertcolor-trees - start a 4.json for '6tri'
 * (done) new:  start post #1049 on linux-dd
-
-* () forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
+* (done) forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
 
 * () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 * () forpost: start three-vector2 for post folder
