post-check;id#: 1050;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -20,7 +20,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () idle-mrsun : start r102
 
 ### () - FRI 06/09/2023
-* () new:  start post #1050 on threejs-vector2
+* (done) new:  start post #1050 on threejs-vector2
 
 * () forpost: threejs-buffer-geomerty - 
 * () edit: linux-dd - expand sections.
@@ -31,9 +31,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) json: vertcolor-trees - start a 4.json for '6tri'
 * (done) new:  start post #1049 on linux-dd
 * (done) forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
-
-* () videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
-* () forpost: start three-vector2 for post folder
+* (done) videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
+* (done) forpost: start three-vector2 for post folder
 
 
 
