--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -9,6 +9,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ---------- --------->
 ## () - WEEK 3 - SUN 06/11/2023 - SAT 06/17/2023
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () forpost: threejs-buffer-geomerty-attributes-uv - minimap debugger
 
 <!-------- ----------
 -- WEEK 2
@@ -16,14 +17,18 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 2 - SUN 06/04/2023 - SAT 06/10/2023
 
 ### () - SAT 06/10/2023
+* () forpost: threejs-vector2 - expand sections
+* () edit: threejs-vector2 - write about new demos
+* () build and publish
+
+* () json : vertcolor-trees - work on more models
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
 
 ### () - FRI 06/09/2023
 * (done) new:  start post #1050 on threejs-vector2
-
-* () forpost: threejs-buffer-geomerty - 
-* () edit: linux-dd - expand sections.
+* () json : vertcolor-trees - work on more models
+* () forpost: threejs-vector2 - expand sections
 
 ### () - THU 06/08/2023
 * (done) edit: threejs-standard-material - proof read opening and getting started
@@ -33,8 +38,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) forpost: threejs-buffer-geometry-loader - update promise loader demo to what was worked out in three-buffer-geometry
 * (done) videoground-blog-posts: video1 for threejs-tube-geometry based on curve path update demo
 * (done) forpost: start three-vector2 for post folder
-
-
 
 ### () - WED 06/07/2023
 * (done) forpost: threejs-line-fat-width - new section on tube geometry
