--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -21,13 +21,18 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-vector2 - write about new demos
 * () build and publish
 
-* () json : vertcolor-trees - finish 5.json of 6tri
+* () json: vertcolor-trees - 
+* () json: vertcolor-bugs - start a new json folder of butter flys
+* () json: vertcolor-solidworlds - start a collection of simple worlds as single, solid shapes
+
+
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
 
 ### () - FRI 06/09/2023
 * (done) new:  start post #1050 on threejs-vector2
 * (done) json : vertcolor-trees - finish 4.json of 6tri
+* (done) json : vertcolor-trees - finish 5.json of 6tri
 * () forpost: threejs-vector2 - expand sections
 
 ### () - THU 06/08/2023
