post-check;id#: 1050;v: 1.4;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -17,8 +17,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 2 - SUN 06/04/2023 - SAT 06/10/2023
 
 ### () - SAT 06/10/2023
-* () forpost: threejs-vector2 - expand sections
-* () edit: threejs-vector2 - write about new demos
+* (done) forpost: threejs-vector2 - expand sections
+* (done) edit: threejs-vector2 - write about new demos
 * () build and publish
 
 * () json: vertcolor-trees - have more than one morph attribute
