--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -4,12 +4,36 @@ Linux, THREEJS
 
 I will have to keep staying in my lane with threejs of course. However at this time I should also expand, and edit Linux content at least a little as well now. Linux is has a much wider user base, so there is the potential of more traffic. However in any case I use Linux every day, there is much more for me to learn about it, so it just makes sense to do more research, write more content, and improve the older content I have written thus far.
 
+
+<!-------- ----------
+-- mrsun
+---------- --------->
+* () idle-mrsun : finish r101
+* () idle-mrsun : start r102
+
+
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 06/11/2023 - SAT 06/17/2023
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+
+### () - SAT 06/17/2023
+
+### () - FRI 06/16/2023
+
+### () - THU 06/15/2023
+
+### () - WED 06/14/2023
+
+### () - TUE 06/13/2023
+
+### () - MON 06/12/2023
+
+### () - SUN 06/11/2023
+* () videoground: 
 * () forpost: threejs-buffer-geomerty-attributes-uv - minimap debugger
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+
 
 <!-------- ----------
 -- WEEK 2
@@ -19,17 +43,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/10/2023
 * (done) forpost: threejs-vector2 - expand sections
 * (done) edit: threejs-vector2 - write about new demos
-* () build and publish
-
-* () json: vertcolor-trees - have more than one morph attribute
-* () demo: update vercolor-trees-tri6-morph to make use of more than one morph attribute
-
-* () json: vertcolor-bugs - start a new json folder of butter flys
-* () json: vertcolor-solidworlds - start a collection of simple worlds as single, solid shapes
-
-
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
+* (done) build and publish
 
 ### () - FRI 06/09/2023
 * (done) new:  start post #1050 on threejs-vector2
