--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -26,13 +26,22 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - WED 06/14/2023
 
 ### () - TUE 06/13/2023
+* () new:  start post #1051 on threejs-extrude-geometry
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 
 ### () - MON 06/12/2023
+* (done) edit: threejs-vector3-set-from-spherical-coords - proof read opening and getting started
+
+* () forpost: threejs-buffer-geomerty-attributes-uv - minimap debugger
+* () videoground-blog-posts: video2 for threejs-buffer-geomerty-attributes-uv
+* () edit: threejs-buffer-geomerty-attributes-uv - write about new minimap debugger
+
+* () videoground: expand todo list for r9
 
 ### () - SUN 06/11/2023
-* () videoground: 
-* () forpost: threejs-buffer-geomerty-attributes-uv - minimap debugger
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* (done) videoground: finish r8
+* (done) cideoground: start r9
+
 
 
 <!-------- ----------
